--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "private": false,
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
+    "mongoose-paginate": "^5.0.3",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
